2006-08-17  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyName.cs
	  Mono.Cecil/BaseAssemblyResolver.cs:
		Implement a AssemblyNameReference.Parse(string)

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Avoid infinite recursion.

	* Mono.Cecil/BaseAssemblyResolver.sc:
		Stay .net 1.1 compatible

2006-08-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IAssemblyResolver.cs
	  Mono.Cecil/BaseAssemblyResolver.cs
	  Mono.Cecil/DefaultAssemblyResolver.cs
	  Mono.Cecil/AssemblyDefinition.cs
		Implement an assembly resolver.

	* Mono.Cecil/ReflectionReader.cs:
		Fix the initial value reading.
		Based on a report and a patch of Roei Erez  <roeie@mainsoft.com>

2006-08-15  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs:
		Fix the CopyTo method.

2006-07-19  Jb Evain  <jbevain@gmail.com>

	* CodeGen/templates/IIndexedCollection.cs
	  CodeGen/templates/IndexedCollectionImplem.cs
	  Mono.Cecil/IConstructorCollection.cs
	  Mono.Cecil/IMethodDefinitionCollection.cs
	  Mono.Cecil/MethodDefinitionCollection.cs
	  Mono.Cecil/ConstructorCollection.cs:
		Add a GetConstructor(bool,ParameterDefinitionCollection) method
		required by the linker.

	* Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/StringsHeap.cs:
		Read the string on demand, based on the index.
		Needed due to some obfuscators that create a string entry like
		xClassName, and make the pointer points to after the x.

2006-07-03	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>
	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/ImageReader.cs:
	  	CompactFramework compatibility.

2006-07-02	Rodrigo B. de Oliveira <rodrigobamboo@gmail.com>

	* CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Binary/ImageReader.cs: